--- a/views/category.html
+++ b/views/category.html
@@ -24,14 +24,16 @@
                     <div class="product-carousel-price">
                         <ins>$899.00</ins> <del>$999.00</del>
                     </div>  
-                    
+
                     <div class="product-option-shop">
                         <a class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70" rel="nofollow" href="/canvas/shop/?add-to-cart=70">Add to cart</a>
                     </div>                       
                 </div>
+            </div>
             {/loop}
+
         </div>
-        
+
         <div class="row">
             <div class="col-md-12">
                 <div class="product-pagination text-center">
